<resources>
    <string name="app_name">taskmaster</string>
    <string name="my_task">My Task</string>
    <string name="todo">TODO</string>
    <string name="add_task">Add Task</string>
    <string name="all_task">All Task</string>
    <string name="task_description">Task Description</string>
    <string name="task_title">Task Title</string>
    <string name="edit_user_name">User Name</string>
    <string name="save">Save</string>
    <string name="action_settings">Setting</string>
    <string name="task_1">task-1</string>
    <string name="lab_task">Do the lab</string>
    <string name="code_challange">Code Challange</string>
    <string name="sleep">Sleep</string>
    <string name="description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title">Title</string>
    <string name="user_name">My Task</string>
    <string name="complete">complete</string>
    <string-array name="status_arrays">
        <item>new</item>
        <item>assigned</item>
        <item>in progress</item>
        <item>complete</item>
    </string-array>
    <string-array name="team_array">
        <item>team 1</item>
        <item>team 2</item>
        <item>team 4</item>
    </string-array>
    <string name="title_activity_sighnup">SighnupActivity</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_sign_up">Sign Up Activity</string>
    <string name="label_enter_code">Enter verification code</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up_prompt">Don\'t have account? SIGN UP</string>
    <string name="logout">Logout</string>

</resources>